[package]
name = "direction"
version = "0.1.0"
authors = ["Max Wagner <wagnerm@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
structopt = "0.3.18"
